✨ Added new recipe cheese-sandwich.html
For some reason cheese-sandwich.webp isn't showing up correctly 😭

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/omelet.html">Yummy Veggie Omelet</a>
+    <ul>
+        <li><a href="./recipes/omelet.html">Yummy Veggie Omelet</a></li>
+        <li><a href="./recipes/cheese-sandwich.html">Grilled Cheese Sandwich</a></li>
+    </ul>
 </body>
 </html>
