--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/omelet.html">Yummy Veggie Omelet</a></li>
-        <li><a href="./recipes/cheese-sandwich.html">Grilled Cheese Sandwich</a></li>
+    <h1 class="title" id="homepage">Odin Recipes</h1>
+    <ul id="recipe-index">
+        <li><a class="link" href="./recipes/omelet.html">Yummy Veggie Omelet</a></li>
+        <li><a class="link" href="./recipes/cheese-sandwich.html">Grilled Cheese Sandwich</a></li>
     </ul>
+<div class="footer">
+    <p>made with ❤️ by <a href="https://github.com/glitchood/" target="_blank">glitchood</a> :D</p>
+</div>
 </body>
 </html>
