--- a/recipes/cheese-sandwich.html
+++ b/recipes/cheese-sandwich.html
@@ -3,26 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grilled Cheese Sandwich</title>
+    <link rel="stylesheet" href="./../style.css">
+    <title>Grilled Cheese Sandwich - Odin Recipes</title>
 </head>
 <body>
-    <h1>Grilled Cheese Sandwich</h1>
-    <img src="../img/cheese-sandwich.webp" alt="Cheese Sandwich" width="400">
-    <h2>Description</h2>
-    <p>Everyone needs to know how to make a classic grilled cheese sandwich. Whether you're a beginner cook or an old pro, you'll come back to this top-rated grilled cheese recipe again and again.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>White bread</li>
-        <li>Sliced cheese</li>
-        <li>Butter</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Butter the bread on one side and place the bread butter-side down on a hot skillet.</li>
-        <li>Top with cheese, then place another slice of bread on top (butter-side up).</li>
-        <li>Cook until the bottom slice is lightly browned, then flip.</li>
-        <li>Continue cooking until the cheese is melted.</li>
-    </ol>
-
+    <h1 class="title" id="cheese">Grilled Cheese Sandwich</h1>
+    <img class="image" src="../img/cheese-sandwich.webp" width="300">
+    <div class="block description">
+        <h2 class="heading description">Description</h2>
+        <p>Everyone needs to know how to make a classic grilled cheese sandwich. Whether you're a beginner cook or an old pro, you'll come back to this top-rated grilled cheese recipe again and again.</p>
+    </div>
+    <div class="block ingredients">
+        <h2 class="heading ingredients">Ingredients</h2>
+        <ul>
+            <li>White bread</li>
+            <li>Sliced cheese</li>
+            <li>Butter</li>
+        </ul>
+    </div>
+    <div class="block steps">
+        <h2 class="heading steps">Steps</h2>
+        <ol>
+            <li>Butter the bread on one side and place the bread butter-side down on a hot skillet.</li>
+            <li>Top with cheese, then place another slice of bread on top (butter-side up).</li>
+            <li>Cook until the bottom slice is lightly browned, then flip.</li>
+            <li>Continue cooking until the cheese is melted.</li>
+        </ol>
+    </div>
+    <br>
+    <a class="link emoji" href="../index.html">🔙</a>
+    <a class="link emoji" href="#cheese">🔝</a>
 </body>
 </html>
