--- a/recipes/omelet.html
+++ b/recipes/omelet.html
@@ -3,30 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yummy Veggie Omelet</title>
+    <link rel="stylesheet" href="./../style.css">
+    <title>Yummy Veggie Omelet - Odin Recipes</title>
 </head>
 <body>
-    <h1>Yummy Veggie Omelet</h1>
-    <img src="../img/omelet.webp" width="300">
-    <h2>Description</h2>
-    <p>This veggie omelet is delicious served on top of toast. Use any cheese you like — Swiss and Gouda are both good choices.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 tablespoons butter, divided</li>
-        <li>1 small onion, chopped</li>
-        <li>1 green bell pepper, chopped</li>
-        <li>¾ teaspoon salt, divided</li>
-        <li>4 large eggs</li>
-        <li>2 tablespoons milk</li>
-        <li>⅛ teaspoon freshly ground black pepper</li>
-        <li>2 ounces shredded Swiss cheese</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Melt 1 tablespoon butter in a medium skillet over medium heat. Cook and stir onion and bell pepper in butter until just tender, 4 to 5 minutes. Transfer vegetables to a bowl, season with 1/4 teaspoon salt, and set aside.</li>
-        <li>Beat together eggs, milk, remaining 1/2 teaspoon salt, and pepper in a separate bowl.</li>
-        <li>Melt remaining 1 tablespoon butter in the skillet over medium heat; swirl to coat the bottom of the skillet with butter. When butter is bubbly, pour in egg mixture and cook undisturbed until the bottom of eggs begin to set, about 1 minute. Gently lift the edges of omelet with a spatula to let any uncooked egg flow onto the skillet. Continue cooking until the center of omelet starts to look dry, 1 to 2 more minutes.</li>
-        <li>Sprinkle cheese over omelet, then spoon vegetable mixture over 1/2 of the omelet. Use a spatula to gently fold omelet over vegetables. Cook until cheese melts to desired consistency, about 1 minute. Slide omelet onto a plate. Cut in half and serve.</li>
-    </ol>
+    <h1 class="title" id="omelet">Yummy Veggie Omelet</h1>
+    <img class="image" src="../img/omelet.webp" width="300">
+    <div class="block description">
+        <h2 class="heading description">Description</h2>
+        <p>This veggie omelet is delicious served on top of toast. Use any cheese you like — Swiss and Gouda are both good choices.</p>
+    </div>
+    <div class="block ingredients">
+        <h2 class="heading ingredients">Ingredients</h2>
+        <ul>
+            <li>2 tablespoons butter, divided</li>
+            <li>1 small onion, chopped</li>
+            <li>1 green bell pepper, chopped</li>
+            <li>¾ teaspoon salt, divided</li>
+            <li>4 large eggs</li>
+            <li>2 tablespoons milk</li>
+            <li>⅛ teaspoon freshly ground black pepper</li>
+            <li>2 ounces shredded Swiss cheese</li>
+        </ul>
+    </div>
+    <div class="block steps">
+        <h2 class="heading steps">Steps</h2>
+        <ol>
+            <li>Melt 1 tablespoon butter in a medium skillet over medium heat. Cook and stir onion and bell pepper in butter until just tender, 4 to 5 minutes. Transfer vegetables to a bowl, season with 1/4 teaspoon salt, and set aside.</li>
+            <li>Beat together eggs, milk, remaining 1/2 teaspoon salt, and pepper in a separate bowl.</li>
+            <li>Melt remaining 1 tablespoon butter in the skillet over medium heat; swirl to coat the bottom of the skillet with butter. When butter is bubbly, pour in egg mixture and cook undisturbed until the bottom of eggs begin to set, about 1 minute. Gently lift the edges of omelet with a spatula to let any uncooked egg flow onto the skillet. Continue cooking until the center of omelet starts to look dry, 1 to 2 more minutes.</li>
+            <li>Sprinkle cheese over omelet, then spoon vegetable mixture over 1/2 of the omelet. Use a spatula to gently fold omelet over vegetables. Cook until cheese melts to desired consistency, about 1 minute. Slide omelet onto a plate. Cut in half and serve.</li>
+        </ol>
+    </div>
+    <br>
+    <a class="link emoji" href="../index.html">🔙</a>
+    <a class="link emoji" href="#omelet">🔝</a>
 </body>
 </html>
